updated on 8th april

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -21,7 +21,7 @@
 			</ul>
 			<!-- log-out button-->
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="indexcopy.html" id="logOutId"><span class="glyphicon glyphicon-off"></span> Log out</a></li>
+				<li><a href="" id="logOutId"><span class="glyphicon glyphicon-off"></span> Log out</a></li>
 			</ul>
 		</div>
 	</nav>
